FileReader.abort() should not fire an error event.

The 'error', 'abort' and 'load' events are mutually exclusive. Each read
operation should only result in one of these events. So stop the error
event from being fired by the abort method, to align our behavior with
at least firefox and edge.

(at the time our implementation was written, the spec did still require
an error event as well for this case, but that was changed fairly soon after
in the spec)

Test landed upstream in https://github.com/w3c/web-platform-tests/pull/4747

BUG=689208

Review-Url: https://codereview.chromium.org/2680603002
Cr-Commit-Position: refs/heads/master@{#448714}

Former-commit-id: c78653065fa6d8fb524e48a5d7232f3ab5eab4ab